# AbstractArchLinearAlgebra

./: .gitignore  CMakeLists.txt  LinearAlgebra.h  LinearAlgebra.tcc  LinearAlgebraAbstractVector.tcc  LinearAlgebraDevice.tcc  LinearAlgebraHost.tcc  LinearAlgebraHostVector.tcc  test.cpp  testLinearAlgebra
example/: test.cpp
include/: LinearAlgebra.h  LinearAlgebraOperations.h
src/: HostLinearAlgebraOperations.tcc  LinearAlgebra.tcc  LinearAlgebraAbstractVector.tcc  LinearAlgebraDeviceVector.tcc  LinearAlgebraHostVector.tcc  LinearAlgebraOperationsDouble.tcc
